[package]
name = "calcit_wss"
version = "0.0.1-a2"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2018"

[lib]
name = "calcit_wss"
path = "src/lib.rs"
crate-type = ["dylib"] # Creates dynamic lib


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_edn = "0.2.2"
lazy_static = "1.4.0"
simple-websockets = "0.1.2"

